k8s-eks.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nanoproxy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy
  namespace: nanoproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: proxy
    spec:
      containers:
        - image: ghcr.io/vprus/nanoproxy:main
          name: proxy
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /ping
              port: 9090
          ports:
            - containerPort: 7070
              name: service
            - containerPort: 9090
              name: control
          resources:
            requests:
              memory: "0.5Gi"
              cpu: "0.25"
              ephemeral-storage: "10Mi"
            limits:
              memory: "0.5Gi"
              cpu: "0.25"
---
apiVersion: v1
kind: Service
metadata:
  name: proxy
  namespace: nanoproxy
spec:
  selector:
    app: proxy
  ports:
    - protocol: TCP
      port: 7070
      targetPort: 7070
      name: service
    - protocol: TCP
      port: 9090
      targetPort: 9090
      name: control
---
# For this ingress definition to do anything, you need an ingress controller, such as
#   https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.6/
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxy
  namespace: nanoproxy
  labels:
    app: proxy
  annotations:
    # Route traffic directly to IP addresses of the pod.
    # The default alternative is using node port of the service, which
    # adds extra hop, and can break if there are too many nodes
    alb.ingress.kubernetes.io/target-type: ip
spec:
  # This is important for ALB to process this ingress
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proxy
                port:
                  number: 7070
